StorageTestsWorking
resolved maven/test container/test dependency/pom issues